--- a/package.json
+++ b/package.json
@@ -3,26 +3,38 @@
 	"version": "0.8.5",
 	"author": "sheetjs",
 	"description": "Excel (XLSB/XLSX/XLSM/XLS/XML) and ODS spreadsheet parser and writer (extended to enable read/write of cell formats with xlsx files)",
-	"keywords": [ "excel", "xls", "xlsx", "xlsb", "xlsm", "ods", "office", "spreadsheet" ],
+	"keywords": [
+		"excel",
+		"xls",
+		"xlsx",
+		"xlsb",
+		"xlsm",
+		"ods",
+		"office",
+		"spreadsheet"
+	],
 	"bin": {
 		"xlsx": "./bin/xlsx.njs"
 	},
 	"main": "./xlsx",
 	"dependencies": {
-		"ssf":"~0.8.1",
-		"codepage":"~1.3.6",
-		"cfb":">=0.10.0",
-		"jszip":"2.4.0",
-		"crc-32":"",
-		"adler-32":"",
-		"commander":""
+		"ssf": "~0.8.1",
+		"codepage": "~1.3.6",
+		"cfb": ">=0.10.0",
+		"jszip": "2.4.0",
+		"crc-32": "",
+		"adler-32": "",
+		"commander": ""
 	},
 	"devDependencies": {
-		"mocha":"",
-		"xlsjs":"",
-		"uglify-js":""
+		"mocha": "",
+		"xlsjs": "",
+		"@sheetjs/uglify-js": "~2.7.3"
 	},
-	"repository": { "type":"git", "url":"git://github.com/protobi/js-xlsx.git#beta" },
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/protobi/js-xlsx.git#beta"
+	},
 	"scripts": {
 		"pretest": "git submodule init && git submodule update",
 		"test": "make test"
@@ -32,7 +44,11 @@
 			"pattern": "xlsx.js"
 		}
 	},
-	"bugs": { "url": "https://github.com/protobi/js-xlsx/issues" },
+	"bugs": {
+		"url": "https://github.com/protobi/js-xlsx/issues"
+	},
 	"license": "Apache-2.0",
-	"engines": { "node": ">=0.8" }
+	"engines": {
+		"node": ">=0.8"
+	}
 }
